[package]
name = "tezos-contract"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"
async-trait = "0.1"

# Local dependencies
tezos-core = { path = "../tezos-core", version = "0.1.4" }
tezos-rpc = { path = "../tezos-rpc", version = "0.1.4", default-features = false }
tezos-michelson = { path = "../tezos-michelson", version = "0.1.4" }
tezos-operation = { path = "../tezos-operation", version = "0.1.4" }

[dev-dependencies]
tokio = { version = "1.19", features = ["macros"] }
httpmock = { version = "0.6" }

[features]
default = [ "tezos-rpc/default" ]