[package]
name = "tezos-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"
bs58 = { version = "0.4", features = ["check"] }
num-bigint = "0.4"
num-integer = "0.1"
num-traits = { version = "0.2", features = ["i128"] }
regex = "1"
sodiumoxide = { version = "0.2", optional = true }
k256 = { version = "0.11", optional = true, features = ["ecdsa", "sha256"] }
p256 = { version = "0.11", optional = true, features = ["ecdsa", "sha256"] }
sha2 = { version = "0.10", optional = true }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }


[features]
default = ["crypto"]
crypto = ["dep:sodiumoxide", "dep:k256", "dep:p256", "dep:sha2"]
