[package]
name = "tezos-core"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"
bs58 = { version = "0.4", features = ["check"] }
num-bigint = "0.4"
num-integer = "0.1"
num-traits = { version = "0.2", features = ["i128"] }
regex = "1"
ed25519-dalek = { version = "1.0.1", optional = true }
k256 = { version = "0.11", optional = true, features = ["ecdsa", "sha256"] }
p256 = { version = "0.11", optional = true, features = ["ecdsa", "sha256"] }
hex = "0.4"
lazy_static = "1"
serde = { version = "1", features = ["derive"], optional = true }
blake2 = "0.10"
cfg-if = "1"

[features]
full_crypto = ["ed25519", "secp256_k1", "p256"]
ed25519 = ["dep:ed25519-dalek"]
secp256_k1 = ["dep:k256"]
p256 = ["dep:p256"]
serde = ["dep:serde"]
