[package]
name = "tezos-michelson"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"
num-traits = { version = "0.2", features = ["i128"] }
num-integer = "0.1"
regex = "1"
hex = "0.4"
serde = { version = "1", features = ["derive"], optional = true }
chrono = { version = "0.4", features = ["std"], default-features = false }
lazy_static = "1"

tezos-core = { path = "../tezos-core", version = "0.1.3" }

[dev-dependencies]
hex-literal = "0.3"
serde_json = { version = "1", features = ["preserve_order"] }

[features]
serde = ["dep:serde", "tezos-core/serde"]
