[package]
name = "tezos-operation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
derive_more = "0.99.17"
num-traits = "0.2"
num-derive = "0.3"

tezos-core = { path = "../tezos-core" }
tezos-michelson = { path = "../tezos-michelson" }

[dev-dependencies]
hex-literal = "0.3"

[features]
full_crypto = ["ed25519", "secp256_k1", "p256"]
ed25519 = ["tezos-core/ed25519"]
secp256_k1 = ["tezos-core/secp256_k1"]
p256 = ["tezos-core/p256"]