[package]
name = "tezos-rpc"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
reqwest = { version = "0.11", features = ["json"], optional = true }
derive_more = "0.99"
num-bigint =  { version = "0.4.3", features = ["serde"] }
chrono = { version = "0.4",  features = ["serde", "std"], default-features = false }
async-trait = "0.1"

# Local dependencies
tezos-core = { path = "../tezos-core", version = "0.1.3", features = ["serde"] }
tezos-michelson = { path = "../tezos-michelson", version = "0.1.3", features = ["serde"] }
tezos-operation = { path = "../tezos-operation", version = "0.1.3" }

[dev-dependencies]
tokio = { version = "1.19", features = ["macros"] }
httpmock = { version = "0.6" }

[features]
default = ["http"]
http = ["dep:reqwest"]
