[package]
name = "contract-sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tezos-core = { path = "../../tezos-core", features = ["full_crypto"] }
tezos-contract = { path = "../../tezos-contract" }
tezos-rpc = { path = "../../tezos-rpc" }
tezos-operation = { path = "../../tezos-operation" }
tezos-michelson = { path = "../../tezos-michelson" }

tokio = { version = "1.19", features = ["macros", "rt-multi-thread"] }
derive_more = "0.99.17"
hex = "0.4"
