[package]
name = "michelson-sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tezos-core = { path = "../../tezos-core", features = ['full_crypto'] }
tezos-michelson = { path = "../../tezos-michelson", features = ['serde'] }

serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", features = ["preserve_order"] }
hex = "0.4"
