[package]
name = "operation-sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tezos-core = { path = "../../tezos-core", features = ["full_crypto"] }
tezos-operation = { path = "../../tezos-operation" }
tezos-rpc = { path = "../../tezos-rpc" }

tokio = { version = "1.19", features = ["macros", "rt-multi-thread"] }
derive_more = "0.99.17"
